# MLSalesForecastingApp

./: .env.example  .gitignore  Makefile  README.md  create_structure.sh  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/api/v1/endpoints/: analytics.py  predictions.py  products.py
backend/application/services/: prediction_service.py  smoothing_service.py  sorteo_prediction_service.py  sorteo_selection_service.py
backend/application/workflows/: graphs.py  nodes.py  states.py
backend/core/: config.py  constants.py  exceptions.py
backend/domain/models/: prediction.py  product.py
backend/domain/schemas/request/: prediction.py
backend/domain/schemas/response/: prediction.py
backend/infrastructure/database/: bigquery.py
backend/infrastructure/ml/: preprocessing.py
backend/infrastructure/ml/models/: sorteo_regression.py
docs/: ARCHITECTURE.md
frontend/: app.py
frontend/src/utils/: api_client.py  data_parsers.py
helperData(remove)/: modelLinearRegression.py
