[project]
name = "sales-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==25.9.0",
    "db-dtypes==1.2.0",
    "fastapi==0.117.1",
    "google-cloud-aiplatform>=1.115,<2",
    "google-cloud-bigquery==3.38.0",
    "httpx==0.28.1",
    "langchain==0.3.27",
    "langchain-google-vertexai==2.1.2",
    "langgraph>=0.6,<0.7",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.11,<3",
    "pytest==8.4.2",
    "python-dotenv>=1.0.0,<2",
    "python-multipart==0.0.20",
    "scikit-learn==1.7.2",
    "streamlit==1.50.0",
    "uvicorn[standard]==0.37.0",
]
